--- a/styles/_sass_modules/containers/_terms-of-use.scss
+++ b/styles/_sass_modules/containers/_terms-of-use.scss
@@ -1,5 +1,5 @@
 .terms-of-use {
-  @include flex-container(column, center, flex-start);
+  @include flex-container(column, left, flex-start);
   margin: 0px auto;
   padding: 4rem 0;
 
@@ -33,18 +33,21 @@
     display: list-item;
   }
 
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     color: #fff;
     padding-bottom: 2rem;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: bold;
     line-height: 2rem;
     -webkit-font-smoothing: antialiased;
     text-size-adjust: 100%;
-    text-align: justify;
+    text-align: left;
   }
 
-  h1, h2 {
+  h1,
+  h2 {
     line-height: 2rem;
     font-size: 1.5rem;
   }
@@ -52,14 +55,14 @@
   p,
   li {
     margin: 0px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     line-height: 1.5rem;
     color: rgb(215, 215, 215);
     font-size: 1rem;
     -webkit-font-smoothing: antialiased;
     text-size-adjust: 100%;
-    text-align: justify;
+    text-align: left;
     padding-bottom: 1rem;
   }
 }
