path prefix update

--- a/styles/_sass_modules/containers/_terms-of-use.scss
+++ b/styles/_sass_modules/containers/_terms-of-use.scss
@@ -1,5 +1,5 @@
 .terms-of-use {
-  @include flex-container(column, left, flex-start);
+  @include flex-container(column, center, flex-start);
   margin: 0px auto;
   padding: 4rem 0;
 
