--- a/styles/_sass_modules/components/_blur.scss
+++ b/styles/_sass_modules/components/_blur.scss
@@ -1,9 +1,10 @@
 .blur {
-	position: relative;
-	z-index: 2;
-	top: 0;
-	left: 0;
-	width: 100%;
-	background: rgba(255, 255, 255, 0.01);
-	backdrop-filter: blur(20px);
+  position: relative;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.01);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
 }
