--- a/styles/_sass_modules/components/_status-bar.scss
+++ b/styles/_sass_modules/components/_status-bar.scss
@@ -12,7 +12,15 @@
 .status-bar {
   height: 100%;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  background: linear-gradient(180deg, #7024D0 102.86%, #640AD7 202.86%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(102.86%, #7024d0),
+    color-stop(202.86%, #640ad7)
+  );
+  background: -o-linear-gradient(top, #7024d0 102.86%, #640ad7 202.86%);
+  background: linear-gradient(180deg, #7024d0 102.86%, #640ad7 202.86%);
+  -webkit-box-shadow: 0 0 4px #7000ff;
   box-shadow: 0 0 4px #7000ff;
 }
- 
