--- a/styles/_sass_modules/containers/_footer.scss
+++ b/styles/_sass_modules/containers/_footer.scss
@@ -28,7 +28,10 @@
     }
 
     .navbar__list {
+      -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
       margin-left: 0;
       gap: 1rem;
@@ -40,7 +43,10 @@
     }
 
     .socials {
+      -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
       padding: 0;
     }
@@ -75,15 +81,23 @@
 
     .navbar__nav {
       @include flex-container(row, space-between, center);
+      -webkit-box-flex: 1;
+      -ms-flex: 1;
       flex: 1;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
     }
 
     .navbar__nav:nth-of-type(1) {
+      -webkit-box-pack: end;
+      -ms-flex-pack: end;
       justify-content: flex-end;
     }
 
     .navbar__nav:nth-of-type(2) {
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
       justify-content: flex-start;
     }
 
@@ -92,6 +106,8 @@
     }
 
     .socials {
+      -webkit-box-flex: 0;
+      -ms-flex: 0;
       flex: 0;
       padding: 0;
 
@@ -103,7 +119,7 @@
   }
 
   .copyright {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 17px;
     font-weight: normal;
     font-style: normal;
