--- a/styles/_sass_modules/containers/_section-fundamentals.scss
+++ b/styles/_sass_modules/containers/_section-fundamentals.scss
@@ -1,6 +1,8 @@
 #section-fundamentals {
   .cards-wrapper {
     @include grid-container();
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: start;
     justify-items: center;
     grid-column-gap: 47px;
@@ -16,7 +18,7 @@
       overflow: hidden;
       width: 100%;
       max-width: 460px;
-      height: 100%; 
+      height: 100%;
       min-height: 600px;
       border-radius: 22px;
 
@@ -31,6 +33,8 @@
 
       &__body {
         @include flex-container(column, space-between, flex-start, 1rem);
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
         flex: 1;
         width: 100%;
         padding: 2rem;
@@ -40,16 +44,16 @@
       }
 
       &__title {
-        font-family: 'Montserrat', sans-serif;
+        font-family: "Montserrat", sans-serif;
         font-size: 25px;
         font-weight: 600;
         font-style: normal;
         line-height: 30px;
-        color: #FFFFFF;
+        color: #ffffff;
       }
 
       &__content {
-        font-family: 'Montserrat', sans-serif;
+        font-family: "Montserrat", sans-serif;
         font-size: 17px;
         font-weight: 400;
         font-style: normal;
@@ -61,11 +65,17 @@
       }
 
       .btn {
+        -webkit-transition: $transition;
+        -o-transition: $transition;
         transition: $transition;
       }
 
       .btn:hover {
+        -webkit-transition: $transition;
+        -o-transition: $transition;
         transition: $transition;
+        -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
         transform: scale(1.05);
       }
 
@@ -83,7 +93,6 @@
         &__body {
           min-height: 250px;
         }
-
       }
 
       @include for-tablet-landscape-up {
