--- a/styles/_sass_modules/containers/_section-roadmap.scss
+++ b/styles/_sass_modules/containers/_section-roadmap.scss
@@ -3,27 +3,38 @@
   height: 71rem;
 
   &.container {
-    display: grid;
-    align-content: center;
-    align-items: start;
-    justify-content: center;
-    grid-auto-flow: row dense;
     grid-template-columns: 1px 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    display: -ms-grid;
+    display: grid;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: start;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    grid-auto-flow: row dense;
     gap: 0 1em;
     justify-items: center;
   }
 
   .divider {
+    -ms-grid-column: 1;
     grid-column-start: 1;
+    -ms-grid-column-span: 1;
     grid-column-end: 2;
-    grid-row-start: 1; 
+    -ms-grid-row: 1;
+    grid-row-start: 1;
+    -ms-grid-row-span: 2;
     grid-row-end: 3;
   }
 
   .quarter:nth-of-type(1),
   .quarter:nth-of-type(2),
   .quarter:nth-of-type(3) {
+    -ms-grid-column: 2;
     grid-column-start: 2;
   }
 
@@ -36,20 +47,25 @@
   }
 
   .checkpoint:nth-of-type(1) {
+    -ms-grid-column: 1;
     grid-column: 1;
+    -ms-grid-row: 1;
     grid-row: 1;
   }
 
   .checkpoint:nth-of-type(2) {
+    -ms-grid-column: 1;
     grid-column: 1;
+    -ms-grid-row: 2;
     grid-row: 2;
   }
 
   .checkpoint:nth-of-type(3) {
+    -ms-grid-column: 1;
     grid-column: 1;
+    -ms-grid-row: 3;
     grid-row: 3;
   }
-
 
   @include for-desktop-up {
     &.container {
@@ -58,39 +74,55 @@
     }
 
     .quarter:nth-of-type(1) {
+      -ms-grid-column: 3;
       grid-column-start: 3;
+      -ms-grid-row: 1;
       grid-row-start: 1;
     }
 
     .quarter:nth-of-type(2) {
+      -ms-grid-column: 1;
       grid-column-start: 1;
+      -ms-grid-row: 2;
       grid-row-start: 2;
     }
 
     .quarter:nth-of-type(3) {
+      -ms-grid-column: 3;
       grid-column-start: 3;
+      -ms-grid-row: 3;
       grid-row-start: 3;
     }
 
     .divider {
+      -ms-grid-column: 2;
       grid-column-start: 2;
+      -ms-grid-column-span: 0;
       grid-column-end: 2;
+      -ms-grid-row: 1;
       grid-row-start: 1;
+      -ms-grid-row-span: 2;
       grid-row-end: 3;
     }
 
     .checkpoint:nth-of-type(1) {
+      -ms-grid-column: 2;
       grid-column: 2;
+      -ms-grid-row: 1;
       grid-row: 1;
     }
 
     .checkpoint:nth-of-type(2) {
+      -ms-grid-column: 2;
       grid-column: 2;
+      -ms-grid-row: 2;
       grid-row: 2;
     }
 
     .checkpoint:nth-of-type(3) {
+      -ms-grid-column: 2;
       grid-column: 2;
+      -ms-grid-row: 3;
       grid-row: 3;
     }
   }
