--- a/styles/_sass_modules/base/_typography.scss
+++ b/styles/_sass_modules/base/_typography.scss
@@ -40,3 +40,17 @@
   color: rgba(255, 255, 255, 0.4);
   text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
 }
+
+#section-buidlplan {
+  @media only screen and (max-width: 375px) {
+    position:relative;
+    top: -70px;
+  }
+
+  @media only screen and (max-width: 340px) {
+    position:relative;
+    top: -200px;
+  }
+
+  
+}
