made navbar responsive , on tab screen hidden then launch dapp button which wasnt looking alighned and correct

--- a/styles/_sass_modules/containers/_header.scss
+++ b/styles/_sass_modules/containers/_header.scss
@@ -9,7 +9,7 @@ header {
   background: rgba(255, 255, 255, 0.01);
   -webkit-backdrop-filter: blur(50px);
   backdrop-filter: blur(50px);
-  a .btn-group {
+  .btn-group {
     display: none !important;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
